[package]
name = "oscpad"
version = "0.1.0"
authors = ["Ben B <bburdette@gmail.com>"]
description = "OSC 'control panel' server with shared-state web controls"
documentation = "https://github.com/bburdette/oscpad/wiki/Get-started-with-oscpad"
homepage = "https://github.com/bburdette/oscpad"
repository = "https://github.com/bburdette/oscpad.git"
readme = "README.md"
keywords = ["osc", "audio", "opensoundcontrol"]
license = "MIT"

[dependencies]
websocket = "0.15.0"
serde_json = "0.5.1"
serde = "0.5.3"
iron = "0.2.1"
time = "0.1.34" 
tinyosc = "0.0.2"




