[package]
name = "oscpad"
version = "0.2.3"
authors = ["Ben Burdette <bburdette@gmail.com>"]
description = "OSC 'control panel' server with shared-state web controls"
documentation = "https://github.com/bburdette/oscpad/wiki/Get-started-with-oscpad"
homepage = "https://github.com/bburdette/oscpad"
repository = "https://github.com/bburdette/oscpad.git"
readme = "README.md"
keywords = ["osc", "audio", "opensoundcontrol"]
license = "MIT"
include = [ "src/**/*", 
            "example_projects/**/*", 
            "example_projects/guisend/**/*", 
            "example_projects/echotest/**/*", 
            "elm/**/*", 
            "Cargo.toml", 
            "Cargo.lock", 
            "README.md", 
            "LICENSE", 
            "runit.sh", 
            "default.nix", 
            "ns.sh"]

[dependencies]
# touchpage = { path = "../touchpage" }
touchpage = "0.2.0" 
serde_json = "0.7.0"
serde = "0.5.3"
time = "0.1.34" 
tinyosc = "0.0.3"



